cmake_minimum_required(VERSION 3.12)
project(battleship)

add_executable(test_ship test_ship.cpp)
add_executable(test_playertable test_playertable.cpp)
add_executable(test_enemytable test_enemytable.cpp)
add_executable(test_battleshipplayer test_battleshipplayer.cpp)
add_executable(test_coordinate test_coordinate.cpp)
